# setlist-generator

./: .create_wrapper.sh  .gitignore  CLAUDE.md  CLI_GUIDE.md  MIGRATION_GUIDE.md  README.md  RECENCY_SYSTEM.md  SONG_REPLACEMENT_SUMMARY.md  STORAGE_BACKENDS.md  YOUTUBE.md  cleanup_history.py  database.csv  event_types.json  fix_punctuation.py  generate_pdf.py  generate_setlist.py  import_real_history.py  list_moments.py  main.py  migrate_folders.py  pyproject.toml  replace_song.py  tags.csv  test_comparison.py  test_recency_decay.py  view_setlist.py  view_setlist_wrapper.py  view_song.py
.claude/: DOCUMENTATION_MIGRATION.md  SHELL_COMPLETION.md  settings.local.json
.claude/rules/: api.md  cli.md  core-architecture.md  data-maintenance.md  development.md  observability.md  testing.md
api/: __init__.py  app.py  auth.py  deps.py  middleware.py  openapi.yaml
api/routes/: admin.py  config.py  event_types.py  labels.py  setlists.py  sharing.py  songs.py
api/schemas/: config.py  event_types.py  setlists.py  sharing.py  songs.py
chords/: A Alegria Está No Coração.md  A Casa é Sua.md  Abra os olhos do meu coração.md  Agradeço.md  Amigo de Deus.md  Ao Único.md  Aos Pés da Cruz.md  Autoridade e Poder.md  Bondade de Deus.md  Brilha Jesus.md  Consagração.md  Corpo e Família.md  Creio que Tu És a Cura.md  Deus Cuida de Mim.md  Deus Grandão.md  Deus de Promessas.md  Em Espírito Em Verdade.md  Entrega.md  Espírito Enche a Minha Vida.md  Estamos de Pé.md  Eu Navegarei.md  Eu Te Busco.md  Fico Feliz.md  Grande É o Senhor.md  Homenzinho Torto.md  Hosana.md  Há Uma Unção.md  Jesus Em Tua Presença.md  Leão da Tribo de Judá.md  Livre Acesso.md  Lugar Secreto.md  Mais Que Uma Voz.md  Me Derramar.md  Naves Imperiais.md  Noite de Paz.md  O Nosso General É Cristo.md  Oceanos.md  Ousado Amor.md  Perfeito Amor.md  Porque Ele Vive.md  (+16 more)
cli/: __init__.py  cli_utils.py  completions.py  main.py  picker.py
cli/commands/: __init__.py  add.py  browse.py  delete.py  edit.py  event_type.py  generate.py  info.py  label.py  list_moments.py  markdown.py  pdf.py  remove.py  replace.py  setlists.py  transpose.py  view_setlist.py  view_song.py  weights.py  youtube.py  youtube_links.py
history/: 2025-05-31.json  2025-07-06.json  2025-07-27.json  2025-08-17.json  2025-08-31.json  2025-09-14.json  2025-09-21.json  2025-10-05.json  2025-11-09.json  2025-11-16.json  2025-12-07.json  2025-12-15.json  2025-12-22.json  2025-12-28.json  2026-01-19.json  2026-01-25.json  2026-02-08.json  2026-03-01.json  2026-03-01_noite.json  2026-03-20.json  history_extracted_from_google_drive_2026_01_29.json
output/: 2026-01-26.md  2026-01-28.md  2026-02-01.md  2026-02-02.md  2026-02-08.md  2026-02-15.md  2026-03-01.md  2026-03-01_manha.md  2026-03-01_noite.md  2026-03-04.md  2026-03-15.md  2026-03-20.md  2026-03-29_evening.md  2026-03-29_morning.md  2026-04-01.md
output/ceia/: 2026-04-05.md
output/jejumeoracao/: 2026-03-04.md
scripts/: migrate_chords_to_postgres.py  migrate_event_types.sql  migrate_moments_order.sql  migrate_set_org_context.sql  migrate_to_postgres.py  schema.sql  supabase_schema.sql  supabase_seed.sql
setlist/: __init__.py  config.py  formatter.py  generator.py  loader.py  models.py  ordering.py  pdf_formatter.py  selector.py
setlists/: 2026-01-05.json  2026-02-01.md  2026-02-03.md  2026-02-10.md  2026-02-16.md  2026-02-20.md  2026-03-01.md
songbook/: cli_utils.py  completions.py  main.py
songbook/commands/: generate.py  list_moments.py  maintenance.py  pdf.py  replace.py  (+2 more)
supabase/: config.toml
tests/: conftest.py  test_completions.py
(+72 files in other folders)
