[project]
name = "songbook"
version = "1.0.0"
description = "Church worship setlist generator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "reportlab>=4.4.9",
]

[project.scripts]
songbook = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
