[project]
name = "songbook"
version = "1.0.0"
description = "Church worship setlist generator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "reportlab>=4.4.9",
    "simple-term-menu>=1.6.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.2.0",
]

[project.scripts]
songbook = "cli:main"
songbook-api = "api:create_app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
postgres = [
    "psycopg[binary,pool]>=3.1",
]
saas = [
    "supabase>=2.0",
    "boto3>=1.28",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "unit: fast isolated tests with no external dependencies",
    "integration: tests that interact with real or simulated external systems",
    "slow: tests that take more than a few seconds to run",
    "postgres: tests that require a PostgreSQL database (DATABASE_URL env var)",
    "supabase: tests that require a local Supabase instance",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["library"]
branch = true
omit = ["library/pdf_formatter.py", "library/repositories/postgres/*", "library/repositories/supabase/*", "library/repositories/s3/*", "api/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
    "\\.\\.\\.",
]
